# goat

./: .gitignore  CMakeLists.txt  README.md  goat.pro  sqlgull.pro
resources/: icons.qrc
src/: Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  Credentials.cpp  Credentials.h  Csv.cpp  Csv.h  DatabaseObjectMetadata.cpp  DatabaseObjectMetadata.h  DatabaseService.cpp  DatabaseService.h  ItemModelStyleDecorator.cpp  ItemModelStyleDecorator.h  PagedTableModel.cpp  PagedTableModel.h  Query.cpp  Query.h  QueryResult.cpp  QueryResult.h  QueryState.h  WindowedItemModelDecorator.cpp  WindowedItemModelDecorator.h  main.cpp
test/: TestPagedTableModel.cpp  TestPagedTableModel.h  TestQuery.cpp  TestQuery.h  TestWindowedItemModelDecorator.cpp  TestWindowedItemModelDecorator.h  test_main.cpp
ui/: AboutDialog.ui  CodeEditor.cpp  CodeEditor.h  Completer.cpp  Completer.h  CompleterEngine.cpp  CompleterEngine.h  ConnectionDialog.cpp  ConnectionDialog.h  ConnectionDialog.ui  DatabaseObjectTreeView.cpp  DatabaseObjectTreeView.h  HtmlStyleDelegate.cpp  HtmlStyleDelegate.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  QueryTab.cpp  QueryTab.h  QueryTab.ui  SqlCompleterEngine.cpp  SqlCompleterEngine.h  TableView.cpp  TableView.h
